# crack

./: .contextignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  ORIGINAL_REQUEST.md  PROJECT.md  TEST_INFRA.md  TEST_READY.md  bugs2.txt  build_worker.sh  deploy.sh  download_data.sh  gen-context.config.json  parse_news.py  process_articles.py  sigmap.sh  start_builder.sh  start_fane.sh  start_game_native.sh  start_game_web.sh  start_pedestrian.sh  start_test.sh  start_web.sh  test.sh
.pi/crack/server/: AGENTS.md  README.md  pyproject.toml
.pi/crack/server/tests/: fake_pi.sh  test_ask_user.py  test_async_worker.py  test_plan41.py  test_render_ui.py  test_sandbox.py  test_state.py  test_sub_agents.py  test_vision_media.py  test_wait_join.py
_data/3d_data_v2/: .gitignore  AGENTS.md  README.md  build_blend.py  config.py  debug_positions.py  detections.parquet  earth_client.py  glb_builder.py  glb_stats.py  main.py  mesh_decoder.py  migrate_glb_paths.py  octree.py  osm_download.py  pyproject.toml  rebuild_manifest.py  render_tile.py
_data/3d_data_v2/data_cache/: .gitignore
_data/3d_data_v2/data_in/: sample_tiles_with_cars.txt  zone-bbox.txt
_data/3d_data_v2/data_osm/original/: _list.txt
_data/3d_data_v2/data_out/: 30436272704360.glb  304362727043605.glb  3043627270436050.glb  3043627270436051.glb  3043627270436052.glb  3043627270436053.glb  304362727043607.glb  3043627270436070.glb  3043627270436071.glb  3043627270436072.glb  3043627270436073.glb  304362727043614.glb  3043627270436140.glb  3043627270436141.glb  3043627270436142.glb  3043627270436143.glb  304362727043615.glb  3043627270436150.glb  3043627270436151.glb  3043627270436152.glb  3043627270436153.glb  304362727043616.glb  304362727043617.glb  30436272704362.glb  304362727043625.glb  30436272704363.glb  304362727043634.glb  304362727043635.glb  3043627270437.glb  304362727043704.glb  304362727043705.glb  304362727043706.glb  304362727043707.glb  30436272704372.glb  304362727043724.glb  304362727043725.glb  manifest.json
_data/3d_data_v2/js_exporter/: our-script.js  package-lock.json  package.json
_data/3d_data_v2/street_cleanup/: RESULTS.md  __init__.py  analyze_colors.py  apply_flattening.py  apply_flattening_pantelimon.py  camera_viewpoints.json  check_candidates.py  check_green.py  check_high_res.py  check_osm_trees.py  check_packages.py  coord_utils.py  debug_yolo11.py  demo.py  demo.sh  detect_visdrone_test.py  detect_yolov7.py  download_pantelimon_d20.py  download_weights.py  extract_streets.py  filter_viewpoints.py  find_boulevard_renders.py  find_boulevard_tiles.py  find_high_res_boulevard.py  find_hsv.py  find_large_tiles.py  find_megamall_tiles.py  find_street_tiles.py  flatten_mesh.py  generate_detections_parquet.py  implementation_plan.md  inspect_glb.py  install_patches.py  project_detections.py  render_boulevards.py  render_large_samples.py  render_megamall.py  render_street_views.py  render_top_down.py  road_polygons_enu.wkb  (+17 more)
_data/3d_data_v2/street_cleanup/demo/: demo1.json  demo_batch.json  yolo11m.json
_data/3d_data_v2/street_cleanup/renders/: 0.json  1.json  11253.json  11254.json  11460.json  11622.json  11623.json  11624.json  11625.json  11627.json  11628.json  11629.json  11630.json  11631.json  11632.json  11635.json  11636.json  11638.json  11639.json  11640.json  11641.json  11642.json  11643.json  11646.json  11647.json  11652.json  11656.json  11669.json  11670.json  11672.json  11673.json  11674.json  11675.json  11676.json  11677.json  11765.json  12085.json  12128.json  12186.json  12188.json  (+264 more)
crack_demo/: AGENTS.md  Cargo.toml  Dioxus.toml
crack_demo/chat_cli/: AGENTS.md  Cargo.toml  README.md  test.sh
crack_demo/chat_cli/src/: main.rs
crack_demo/demo_resolution_selector_web_bevy/: AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.fane.html  index.html  post3.db  test.sh
crack_demo/demo_resolution_selector_web_bevy/.cargo/: config.toml
crack_demo/demo_resolution_selector_web_bevy/public/: .gitignore  trunk-init.js
crack_demo/demo_resolution_selector_web_bevy/public/assets/: missions_config.json
crack_demo/demo_resolution_selector_web_bevy/public/scripts/: start-audio.js  storage.js
crack_demo/demo_resolution_selector_web_bevy/src/: basic_app.rs  config.rs  egui_theme.rs  lib.rs  main.rs  main_bevy.rs  main_game_plugin.rs  ui_egui.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/: camera_controls.rs  debug_picker.rs  geojson.rs  main_scene_plugin.rs  mod.rs  notifications.rs  physics_plugin.rs
crack_demo/demo_resolution_selector_web_bevy/src/utils/: create_texture.rs  mod.rs  setup_debug_scene.rs
crack_demo/game_logic/: AGENTS.md  Cargo.toml  README.md  test.sh
crack_demo/game_logic/src/: api.rs  geo.rs  glb.rs  lib.rs  lod.rs  map.rs  network.rs  osm.rs  pedestrian.rs  tile.rs  weapon.rs
crack_demo/game_logic/src/worker/: http.rs  lru.rs  manifest_impl.rs  (+6 more)
crack_demo/src/: main.rs
crack_demo/thread_worker/: AGENTS.md  README.md  test.sh
crack_demo/thread_worker/src/: lib.rs  main.rs
crack_demo/web_worker/: AGENTS.md  Cargo.toml  README.md  test.sh
crack_demo/web_worker/src/: lib.rs
crack_demo2/: Cargo.toml
crack_demo2/assets/pkg_web_serviceworker/: md5.txt  web_serviceworker_crackslave.js  web_serviceworker_crackslave_bg.wasm
crack_demo2/assets/scripts/: worker.js
crack_demo2/src/: main.rs
rust_pkg/_crack_utils/: AGENTS.md  Cargo.toml  README.md  test.sh
rust_pkg/_crack_utils/src/: lib.rs
rust_pkg/api_asscrack/: AGENTS.md  Cargo.toml  README.md  test.sh
rust_pkg/api_asscrack/src/: lib.rs
rust_pkg/net_crackpipe/: AGENTS.md  Cargo.toml  README.md  test.sh
rust_pkg/net_crackpipe/src/: _bootstrap_keys.rs  _random_word.rs  echo.rs  global_matchmaker.rs  lib.rs  network_manager.rs  signed_message.rs  sleep.rs  user_identity.rs
rust_pkg/thread_crackworker/: AGENTS.md  Cargo.toml  README.md  test.sh
rust_pkg/thread_crackworker/src/: lib.rs
rust_pkg/web_serviceworker_crackloader/: AGENTS.md  Cargo.toml  README.md  Readme.md  test.sh
rust_pkg/web_serviceworker_crackloader/src/: lib.rs
(+18285 files in other folders)
