[package]
name = "crack"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.authors]
workspace = true

[features]
default = []
web_serviceworker_worker = ["dep:web_serviceworker_crackslave"]
web_serviceworker_loader = ["dep:web_serviceworker_crackloader"]
native_thread_worker = ["dep:thread_crackworker"]


[dependencies.consensus_crackhead]
path = "./packages/consensus_crackhead"

[dependencies.net_crackpipe]
path = "./packages/net_crackpipe"

[dependencies.storage_crackhouse]
path = "./packages/storage_crackhouse"

[dependencies.api_asscrack]
path = "./packages/api_asscrack"

[dependencies.web_serviceworker_crackloader]
path = "./packages/web_serviceworker_crackloader"
optional = true

[dependencies.web_serviceworker_crackslave]
path = "./packages/web_serviceworker_crackslave"
optional = true

[dependencies.thread_crackworker]
path = "./packages/thread_crackworker"
optional = true

[dev-dependencies]
demo_resolution_selector_web_bevy = { path = "crack_demo/demo_resolution_selector_web_bevy" }
bevy = { version = "0.19.0", features = ["bevy_asset"] }
serde = { version = "1", features = ["derive"] }
storage_crackhouse = { path = "packages/storage_crackhouse" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace]
members = [
    "packages/consensus_crackhead",
    "packages/net_crackpipe",
    "packages/storage_crackhouse",
    "packages/web_serviceworker_crackloader",
    "packages/web_serviceworker_crackslave",

    "packages/api_asscrack",
    "packages/thread_crackworker",
    "packages/_crack_utils",
    
    "crack_demo/web_worker",
    "crack_demo/thread_worker",
    "crack_demo/web_frontend",
    "crack_demo/demo_resolution_selector_web_bevy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
js-sys = "0.3.98"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
web-sys = "0.3.98"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.lints.clippy]
new_without_default = "allow"
unused-async = "warn"

[profile.android-dev]
inherits = "dev"

[profile.desktop-dev]
opt-level = 1
debug = 0
inherits = "dev"

[profile.desktop-dev.package."*"]
opt-level = 3
debug = 0

[profile.dev]
opt-level = 1
debug = 0

[profile.dev.package."*"]
opt-level = 3
debug = 0

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = 0

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
strip = true

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
debug = 0
inherits = "dev"

[profile.wasm-dev.package."*"]
opt-level = 3
debug = 0