[package]
name = "crack"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.authors]
workspace = true

[features]
default = []
web_serviceworker_worker = ["dep:web_serviceworker_crackslave"]
web_serviceworker_loader = ["dep:web_serviceworker_crackloader"]
native_thread_worker = ["dep:thread_crackworker"]


[dependencies.consensus_crackhead]
path = "./rust_pkg/consensus_crackhead"

[dependencies.net_crackpipe]
path = "./rust_pkg/net_crackpipe"

[dependencies.storage_crackhouse]
path = "./rust_pkg/storage_crackhouse"

[dependencies.api_asscrack]
path = "./rust_pkg/api_asscrack"

[dependencies.web_serviceworker_crackloader]
path = "./rust_pkg/web_serviceworker_crackloader"
optional = true

[dependencies.web_serviceworker_crackslave]
path = "./rust_pkg/web_serviceworker_crackslave"
optional = true

[dependencies.thread_crackworker]
path = "./rust_pkg/thread_crackworker"
optional = true

[workspace]
members = [
    "rust_pkg/consensus_crackhead",
    "rust_pkg/net_crackpipe",
    "rust_pkg/storage_crackhouse",
    "rust_pkg/web_serviceworker_crackloader",
    "rust_pkg/web_serviceworker_crackslave",

    "rust_pkg/api_asscrack",
    "rust_pkg/thread_crackworker",
    "rust_pkg/_crack_utils",
    
    "crack_demo/web_worker",
    "crack_demo/thread_worker",
    "crack_demo/game_logic",
    "crack_demo/demo_resolution_selector_web_bevy",
    "crack_demo/chat_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
wasm-bindgen-test = "0.3"
js-sys = "0.3.98"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
web-sys = "0.3.98"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.lints.clippy]
new_without_default = "allow"
unused-async = "warn"

[profile.android-dev]
inherits = "dev"

[profile.desktop-dev]
opt-level = 1
debug = 0
inherits = "dev"

[profile.desktop-dev.package."*"]
opt-level = 3
debug = 0

[profile.dev]
opt-level = 1
debug = 0

[profile.dev.package."*"]
opt-level = 3
debug = 0

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = 0

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
strip = true

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
debug = 0
inherits = "dev"

[profile.wasm-dev.package."*"]
opt-level = 3
debug = 0