[package]
name = "crack_demo2"
version = "0.1.0"
authors = ["johnny-smitherson <127537716+johnny-smitherson@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = [] }
crack = {path="../"}
web_serviceworker_crackloader={path="../packages/web_serviceworker_crackloader"}
anyhow.workspace=true


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
