[project]
name = "3d-data-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.23.0",
    "pandas>=3.0.3",

    "numpy>=2.5.0",
    "pillow>=12.2.0",
    "protobuf>=7.35.1",
    "pyarrow>=24.0.0",
    "pygltflib>=1.16.5",
    "requests[socks]>=2.34.2",
]