[package]
name = "demo_resolution_selector_web_bevy"
version = "0.1.0"
authors = [
    "johnny-smitherson <127537716+johnny-smitherson@users.noreply.github.com>",
]
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["http", "https", "jpeg"] }
bevy_egui = "0.40.0"
avian3d = { git = "https://github.com/avianphysics/avian", branch = "main" }
# bevy_atmosphere = "0.12.2"
# bevy_hanabi = { version = "0.14", default-features = false, features = [ "3d", "serde" ] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.10.1"
rand_chacha = "0.10.0"
getrandom = { version = "0.4.3" }
# web-sys = { version = "0.3.77", optional = true, features = ["Window", "Document", "Element", "HtmlCanvasElement", "CssStyleDeclaration", "HtmlDivElement"] }
tracing = "*"
parquet = { version = "53", default-features = false, features = ["snap"] }
bytes = "1.12.0"
_crack_utils = { path = "../../packages/_crack_utils" }
[dependencies.web-sys]
optional = true
version = "0.3.77"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "HtmlDivElement",
]

[features]
default = []
web = ["dep:web-sys", "getrandom/wasm_js"]
