[package]
name = "game_logic"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
worker = [
    "dep:storage_crackhouse",
    "dep:parquet",
    "dep:bytes",
    "dep:serde_json",
    "dep:reqwest",
    "dep:gltf"
]

[dependencies]
api_asscrack = { path = "../../packages/api_asscrack" }
_crack_utils = { path = "../../packages/_crack_utils" }
# must track bevy_math's glam
glam = { version = "0.32", features = ["serde"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# optional dependencies for the worker feature
storage_crackhouse = { path = "../../packages/storage_crackhouse", optional = true }
parquet = { version = "53", default-features = false, features = ["snap"], optional = true }
bytes = { version = "1", optional = true }
serde_json = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
gltf = { version = "1.4.1", default-features = false, features = ["utils", "names"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = { workspace = true }

