[package]
name = "web_worker"
version.workspace = true
authors.workspace = true
edition.workspace = true



[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
crack = {path="../../", features=["web_serviceworker_worker"]}
game_logic = { path = "../game_logic", features = ["worker"] }
iroh = { version = "0.34.0", default-features = false }
rand = "0.8"
n0-future = "0.1.2"
# NOTE: do NOT depend on the workspace `tokio` here — it enables the `full`
# feature set, which pulls in `mio`/`net` and fails to compile for wasm. This
# crate is a wasm `cdylib`; it does not use tokio directly.
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true
