[package]
name = "_crack_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = {version="0.4.44", features=["serde"] }
n0-future = "0.3.2"
rand = "0.10.1"
getrandom = "0.4.2"
# getrandom = { workspace = true }
# rand = {workspace = true}

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = {version="0.4.44", features=["serde", "wasmbind"] }

getrandom = {version="0.4.2", features=["wasm_js"]}
# wasm-bindgen-futures= {workspace=true}
# gloo-timers ={version= "0.3.0", features = ["futures"]}




[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio.workspace = true

[lints]
workspace = true

[features]
default = []
wasm = [
    "chrono/wasmbind"
]
