[package]
name = "api_asscrack"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = {version="0.4.44", features=["serde"] }
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio = { version = "1.52.3", default-features = false, features = ["sync"] }
async-trait = "0.1.89"
paste = "1"
futures = "0.3.32"
postcard = {version="1.1.3",features = ["use-std"]}
_crack_utils = {path="../_crack_utils"}

[lints]
workspace = true
