[package]
name = "net_crackpipe"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
_crack_utils = {path = "../_crack_utils"}
iroh = { version = "0.34.0", default-features = false }
random_word = { version = "0.5.0", features = ["de"] }
anyhow = "1"
blake3 = { version = "1", package = "iroh-blake3" }
hex = "0.4"
iroh-base = { version = "0.34.0", default-features = false, features = ["ticket"] }
iroh-gossip = { version = "0.34.1", default-features = false, features = ["net"] }
n0-future = "0.1.2"
postcard = "1.1.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tracing = "0.1"
async-channel = "2.3.1"
async-broadcast = "0.7.2"
chrono = "0.4.40"
web-time = "1.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
async-trait = "0.1.88"
paste = "1.0"

# On wasm, uuid v4 and the transitive getrandom 0.3 need an explicit randomness
# source. These features must be enabled for any wasm consumer (the bevy demo and
# the service `web_worker`). getrandom additionally needs the
# `getrandom_backend="wasm_js"` cfg, set in the workspace `.cargo/config.toml`.
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1", features = ["js"] }
getrandom = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
