[project]
name = "crack-pi-server"
version = "0.1.0"
description = "Web UI for .pi/crack/tasks/<task_id> prompt markdown files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "markdown-it-py>=4.2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.32.0",
    "watchfiles>=0.24.0",
]

[project.scripts]
crack-server = "crack_server.main:main"

[tool.poetry]
# src layout: package lives at src/crack_server, imported as crack_server.
packages = [{ include = "crack_server", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
anyio = ">=4"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
